# HyperMandelBulb

./: CMakeLists.txt  LICENSE  README.md
config/: ConfigMandelB.json
doc/: README.txt
src/: Compute.cpp  Compute.h  Output.cpp  Output.h  Parameters.cpp  Parameters.h  Render.cpp  Render.h  main.cpp
